<resources>
    <string name="app_name">GitHub-Java</string>

    <string name="filter_results">Filter results</string>
    <string name="find_a_repository">Find a repository…</string>
    <string name="last_update">Last update:</string>
    <string name="created_at">Created at:</string>
    <string name="archived">Archived:</string>
    <string name="fork">Fork:</string>
    <string name="repo_private">Private:</string>
    <string name="language">Language:</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="show_owner_details">Show owner details</string>
    <string name="site_admin">Site admin:</string>
    <string name="type">Type:</string>
    <string name="no_results">No results</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="sort_results_by">Sort results by</string>

    <string name="stars">stars</string>
    <string name="forks">forks</string>
    <string name="updated">updated</string>
    <string name="best_match">best match</string>
    <string name="authenticate_with_github">Authenticate with GitHub</string>
    <string name="member_since">Member since:</string>
    <string name="followers">Followers:</string>
    <string name="public_repos">Public repos:</string>
    <string name="loading">Loading…</string>
    <string name="authorization_failed">Authorization failed</string>
    <string name="revoke_access">Revoke access</string>

    <string-array name="sorting_types">
        <item>@string/best_match</item>
        <item>@string/stars</item>
        <item>@string/forks</item>
        <item>@string/updated</item>
    </string-array>
</resources>
