<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView_user_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_small"
            android:textColor="@color/colorGray900"
            android:textSize="@dimen/textview_H4_size"
            tools:text="Mario Loncar" />

        <TextView
            android:id="@+id/textView_user_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_small"
            android:textColor="@color/colorGray900"
            android:textSize="@dimen/textview_H4_size"
            tools:text="Zagreb" />

        <TextView
            android:id="@+id/textView_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_small"
            android:textColor="@color/colorGray900"
            android:textSize="@dimen/textview_H4_size"
            tools:text="loncar.mario1@gmail.com" />

        <TextView
            android:id="@+id/textView_user_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_small"
            android:textColor="@color/colorGray900"
            android:textSize="@dimen/textview_H4_size"
            tools:text="lorem ipsum ..." />

        <include layout="@layout/view_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_repos"
                android:textColor="@color/colorGray500"
                android:textSize="@dimen/textview_H4_size" />

            <TextView
                android:id="@+id/textView_user_public_repos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:textColor="@color/colorGray900"
                android:textSize="@dimen/textview_H4_size"
                tools:text="7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textColor="@color/colorGray500"
                android:textSize="@dimen/textview_H4_size" />

            <TextView
                android:id="@+id/textView_user_followers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:textColor="@color/colorGray900"
                android:textSize="@dimen/textview_H4_size"
                tools:text="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member_since"
                android:textColor="@color/colorGray500"
                android:textSize="@dimen/textview_H4_size" />

            <TextView
                android:id="@+id/textView_user_created_at"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_small"
                android:textColor="@color/colorGray900"
                android:textSize="@dimen/textview_H4_size"
                tools:text="14/07/2015" />
        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>